objects/PL_IL2PS__c.object
<CustomObject>
    <fields>
        <fullName>Inst_loc__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Install Location</label>
        <referenceTo>SBQQ__SolutionGroup__c</referenceTo>
        <relationshipLabel>Install Loc 2 Product Summary</relationshipLabel>
        <relationshipName>Install_Loc_2_Product_Summary</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2I_Migration_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PL_PS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Summary</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>PL_MD__c.MD_Type__c</field>
                <operation>equals</operation>
                <value>Product Summary</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>PL_MD__c</referenceTo>
        <relationshipLabel>Install Loc 2 Product Summary</relationshipLabel>
        <relationshipName>Install_Loc_2_Product_Summary</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Install Loc 2 Product Summary</relationshipLabel>
        <relationshipName>Install_Loc_2_Product_Summary</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Install Loc 2 Product Summary</label>
    <nameField>
        <displayFormat>IL2PL-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Install Loc 2 Product Summary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>